fixed wrap no header added margintop for wrap

--- a/css/self.css
+++ b/css/self.css
@@ -9,12 +9,22 @@
     opacity: 0;
 }
 
-.wow, .index_kv, .easy_kv, .patent_kv_m, .patent_kv_pc, .product_kv, .form_kv{
+.wow, .index_kv, .easy_kv, .product_kv, .form_kv{
     visibility: hidden;
 }
 
 header .logo img{
     cursor: pointer;
+}
+
+.one, .two{
+    transform: scale(0);
+}
+.easy h1 p img, .easy h1 span, .easy h2 img{
+    opacity: 0;
+}
+.bubble_block li p{
+    transform: scale(0);
 }
 
 .float{
